New: backend fur das Laden von SchuleDetails ist fertig
